# llm-benchmark

./: .gitignore  CHANGELOG.md  HUGGINGFACE_TOKEN_SETUP.md  LICENSE  README.md  pyproject.toml  requirements.txt  run-vllm-gptoss.sh
dataset/: ShareGPT_tiny.json
docker/: Dockerfile
docs/: params.md  report.md
src/: benchmark.py
src/type/: metrics.py  report.py  run_args.py
src/utils/: client_openai.py  datasets.py  errors.py  progress.py  reporting.py  resource_monitor.py
