[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-benchmark"
version = "0.1.0"
description = "A high-performance benchmarking tool for Large Language Models supporting async execution and OpenAI API format."
readme = "README.md"
requires-python = ">=3.8"

dependencies = ["anyio==3.7.1", "httpx==0.27.0", "orjson==3.10.15", "psutil==5.9.8", "pynvml==11.5.0"]

[project.urls]
Homepage = "https://github.com/innodisk-mannywang/llm-benchmark"
Repository = "https://github.com/innodisk-mannywang/llm-benchmark"
Issues = "https://github.com/innodisk-mannywang/llm-benchmark/issues"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "C408",  # rewrite as a literal
]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true